2011-08-03 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml: update to wtls section with
      available ciphers and howto create SSL-Cert.
      Thanks to Nikos Balkanas <nbalkanas at gmail.com>

2011-08-03 Alexander Malysh <amalysh at kannel.org>
    * wap/wtls_statesupport.c: applied patch that fixes a problem
      with debug log output when large MAC names are used.
      Thanks to Armindo Antunes <armindo.antunes at gmail.com>

2011-07-23 Alexander Malysh <amalysh at kannel.org>
    * gwlib/log.c: Fixed compilation issue when no syslog defined.

2011-07-12 Vincent CHAVANIS <v.chavanis at telemaque.fr>
    * gw/smsc/smsc_at.[ch]: added support for throughput in AT smsc

2011-06-13 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_oracle.c: fixed sql query syntax error. This fixes #607.
      Thanks to Heiki Pikker for this patch.

2011-05-20  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_loopback.c: after switching the MT to an MO message
      we want to clean up any MT specific values, that are still present
      due to the duplication of the message. This is semantically cleaner.

2011-05-11 Alexander Malysh <amalysh at kannel.org>
    * configure.in: added MacOSX10.6.sdk 

2011-05-11 Alexander Malysh <amalysh at kannel.org>
    * gwlib/socket.[ch]: added function to enable/disable Nagle algo.

2011-05-06 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smsc/smsc_http.c, gwlib/cfg.def:
      applied patch that adds meta-data to generic http smsc.
      Thanks to Semion Spivak <semion at smscoin.com> for this patch.

2011-04-28  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: fixing removed portno assignment in r4894.
      Thanks to Rene Kluwen for spotting the defect.
      [Message-Id: <030b01cc052c$60054600$200fd200$@kluwen@chimit.nl>]
    
2011-04-18 Alexander Malysh <amalysh at kannel.org>
    * handle INTERIX differences in the configure.
